fix: correção na padronização dos endpoints
